--- a/principales_propiedades.css
+++ b/principales_propiedades.css
@@ -1,4 +1,24 @@
 /*
 notas de clase:
-1.- los modal por lo general siempre son fijos (sus medidas son px o similares)
+1.- los modal por lo general siempre son fijos (sus medidas son con px o similares)
 */
+html,body{
+    width: 100%;
+    height: 100%;
+}
+
+body{
+    background-color: #999;
+    font-size: 14px;
+    font-family: 'Montserrat',Arial, Helvetica, sans-serif;
+}
+
+.modal{
+    width: 400px;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 20px;
+    /* position: static; este hará que el elemento siga su flujo normal, en otras palabras su orden predeterminado
+    */
+    position: absolute;
+}
